PES-2367: Fixed compatibility with Joomla3 regarding order detail toolbar, moved the style to CSS file and added the 4th value for padding for better readability.

--- a/media/media/css/shipping-method.css
+++ b/media/media/css/shipping-method.css
@@ -21,7 +21,12 @@
 }
 
 .controls fieldset#params_delivery_settings__shipping_type {
-    min-width: inherit !important;
+    width: 250px !important;
+    padding: 8px 5px 5px 5px !important;
+}
+
+.controls fieldset#params_delivery_settings__vendor_groups {
+    width: 250px !important;
 }
 
 .radio div.form-check {
